--- a/webapp/references.html
+++ b/webapp/references.html
@@ -27,12 +27,12 @@
     </div>
 
     <div class="ui equal width center aligned grid">
-        <div class="eight wide column" id="black">Circulation</div>
-        <div class="eight wide blue column">Reference</div>
-        <div class="eight wide olive column">Off</div>
-        <div class="eight wide column" id="black">Service1</div>
-        <div class="eight wide column" id="black">Service2</div>
-        <div class="eight wide pink column">Service3</div>
+        <a href = "mockup.html" class="eight wide column" id="black">Circulation</a>
+        <a href = "mockup.html"class="eight wide blue column">Reference</a>
+        <a href = "mockup.html"class="eight wide olive column">Off</a>
+        <a href = "mockup.html"class="eight wide column" id="black">Service1</a>
+        <a href = "mockup.html"class="eight wide column" id="black">Service2</a>
+        <a href = "mockup.html" class="eight wide pink column">Service3</a>
     </div>    
 
 </body>
