removed + - buttons from tiles on mockup options

--- a/webapp/mockup-options/tap.html
+++ b/webapp/mockup-options/tap.html
@@ -51,11 +51,7 @@
 					<div class = "header"> Directions </div> 
 					<div class = "meta"> Location or directions provided. E.G. rooms, events, contact info, etc. </div> 
 				</div>
-				<div class="ui two bottom attached buttons">
-					<div class="ui negative button"> <i class = "ui minus icon"> </i> </div>
-					<div class="ui positive button"> <i class = "ui plus icon"> </i></div>
 				</div>
-			</div>
 		</div>
 		<div class = "eight wide column"> 
 			<div class="ui fluid card">
@@ -73,11 +69,7 @@
 					<div class = "header"> Lookup </div>
 					<div class = "meta"> Find call numbers, books, articles, locations, etc. for known items requested by patron. </div>
 				</div> 
-				<div class="ui two bottom attached buttons">
-					<div class="ui negative button"> <i class = "ui minus icon"> </i> </div>
-					<div class="ui positive button"> <i class = "ui plus icon"> </i></div>
 				</div>
-			</div>
 
 		</div>
 		<div class = "eight wide column"> 
@@ -96,11 +88,7 @@
 					<div class = "header"> Policy </div>
 					<div class = "meta"> Hours, access privileges, borrowing, reservations, other policies. </div>
 				</div> 
-				<div class="ui two bottom attached buttons">
-					<div class="ui negative button"> <i class = "ui minus icon"> </i> </div>
-					<div class="ui positive button"> <i class = "ui plus icon"> </i></div>
 				</div>
-			</div>
 		</div>
 		<div class = "eight wide column"> 
 			<div class="ui fluid card">
@@ -118,11 +106,7 @@
 					<div class = "header"> Research Assistance </div>
 					<div class = "meta"> Help patron with research strategies, advice, overview of resources (drop-in). </div>
 				</div> 
-				<div class="ui two bottom attached buttons">
-					<div class="ui negative button"> <i class = "ui minus icon"> </i> </div>
-					<div class="ui positive button"> <i class = "ui plus icon"> </i></div>
 				</div>
-			</div>
 		</div>
 		<div class = "eight wide column"> 
 			<div class="ui fluid card">
@@ -140,16 +124,12 @@
 					<div class = "header"> Technical Assistance </div>
 					<div class = "meta"> Help with printers, computers, software, scanners, etc. </div>
 				</div> 
-				<div class="ui two bottom attached buttons">
-					<div class="ui negative button"> <i class = "ui minus icon"> </i> </div>
-					<div class="ui positive button"> <i class = "ui plus icon"> </i></div>
 				</div>
-			</div>
 		</div>
 		<div class = "eight wide column"> 
 			<div class="ui link fluid card" id="ref">
 				<div class="content">
-					<img class="ui small image left floated" src="../../img/referral.png"> 
+					<img class="ui tiny image left floated" src="../../img/referral.png"> 
 					<div class = "header"> Referral </div> 
 					<div class = "meta"> Referral to advanced research support, library location, campus support, etc. </div>
 				</div> 
