--- a/webapp/mockup-options/tap.html
+++ b/webapp/mockup-options/tap.html
@@ -1,149 +1,160 @@
 <html>
 <head>
-	<title>Mockup</title>
+    <title>Mockup</title>
 
-	<!-- JQuery -->
-	<script type="text/javascript" src="../assets/includes/jquery.min.js"></script>
+    <!-- Include meta tag to ensure proper rendering and touch zooming -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<!-- Semantic UI -->
-	<link rel="stylesheet" type="text/css" href="../assets/includes/semantic.min.css?v=1">
-	<script type="text/javascript" src="../assets/includes/semantic.min.js?v=1"></script>
-	<link rel="stylesheet" href = "../assets/includes/calendar/dist/calendar.min.css">
-	<script type="text/javascript" src="../assets/includes/calendar/dist/calendar.min.js"></script>
+    <!-- Include jQuery Mobile stylesheets -->
+    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 
-	<!-- Customization -->
-	<link rel="stylesheet" type="text/css" href="../assets/includes/custom.tap.css?v=1" />
-	<!-- IScroll Link here -->
-	<script type="text/javascript" src="../assets/includes/custom.tap.js?v=1"></script>
+    <!-- Include the jQuery library -->
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+
+    <!-- Include the jQuery Mobile library -->
+    <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+
+    <!-- Semantic UI -->
+    <link rel="stylesheet" type="text/css" href="../assets/includes/semantic.min.css?v=1">
+    <script type="text/javascript" src="../assets/includes/semantic.min.js?v=1"></script>
+    <link rel="stylesheet" href="../assets/includes/calendar/dist/calendar.min.css">
+    <script type="text/javascript" src="../assets/includes/calendar/dist/calendar.min.js"></script>
+
+    <!-- Customization -->
+    <link rel="stylesheet" type="text/css" href="../assets/includes/custom.tap.css?v=1" />
+    <!-- IScroll Link here -->
+    <script type="text/javascript" src="../assets/includes/custom.tap.js?v=1"></script>
 
 
 </head>
 <body>
-	<!-- Menu -->
-	<div class = "ui menu"> 
-		<a href = "index.html" class = "header item">Home</a> 
-	</div>
+    <!-- Menu -->
+    <div class="ui menu"> 
+        <a href="index.html" class="header item">Home</a> 
+    </div>
 
-	<!-- Calendar -->
-	<div class = "ui calendar" id = "calendar"> 
-		<div class = "ui input left icon"> 
-			<i class = "calendar icon"> </i> 
-			<input type = "text" placeholder = "Date">
-		</div> 
-	</div>
-	<br />
+    <!-- Calendar -->
+    <div class="ui calendar" id="calendar"> 
+        <div class="ui input left icon"> 
+            <i class="calendar icon"> </i> 
+            <input type="text" placeholder="Date">
+        </div> 
+    </div>
+    <br />
 
-	<!-- Content -->
-	<div class = "ui equal width aligned grid"> 
-		<div class = "eight wide  column"> 
-			<div class="ui fluid card">
-				<div class="content"> 
-					<div class = "ui inverted segment left floated"> 
-						<div class = "ui tiny inverted statistics left floated"> 
-							<div class = "statistic">
-								<div class = "value"> 45 
-								</div> 
-								<div class = "label"> Count </div>
-							</div>
-						</div>
-					</div>
-					<img class="ui tiny image left floated" src="../../img/directions.png"> 
-					<div class = "header"> Directions </div> 
-					<div class = "meta"> Location or directions provided. E.G. rooms, events, contact info, etc. </div> 
-				</div>
-				</div>
-		</div>
-		<div class = "eight wide column"> 
-			<div class="ui fluid card">
-				<div class="content">
-					<div class = "ui inverted segment left floated">
-						<div class = "ui tiny inverted statistics left floated"> 
-							<div class = "statistic">
-								<div class = "value"> 45
-								</div> 
-								<div class = "label"> Count </div>
-							</div>
-						</div>
-					</div>
-					<img class="ui tiny image left floated" src="../../img/lookup.png"> 
-					<div class = "header"> Lookup </div>
-					<div class = "meta"> Find call numbers, books, articles, locations, etc. for known items requested by patron. </div>
-				</div> 
-				</div>
+    <!-- Content -->
+    <div class="ui equal width aligned grid"> 
+        <div class="eight wide  column"> 
+            <div class="ui fluid card withCount">
+                <div class="content"> 
+                    <div class="ui inverted segment left floated"> 
+                        <div class="ui tiny inverted statistics left floated"> 
+                            <div class="statistic">
+                                <div class="value"> 0 
+                                </div> 
+                                <div class="label"> Count </div>
+                            </div>
+                        </div>
+                    </div>
+                    <img class="ui tiny image left floated" src="../../img/directions.png"> 
+                    <div class="header"> Directions </div> 
+                    <div class="meta"> Location or directions provided. E.G. rooms, events, contact info, etc. </div> 
+                </div>
+            </div>
+        </div>
+        <div class="eight wide column"> 
+            <div class="ui fluid card withCount">
+                <div class="content">
+                    <div class="ui inverted segment left floated">
+                        <div class="ui tiny inverted statistics left floated"> 
+                            <div class="statistic">
+                                <div class="value"> 0
+                                </div> 
+                                <div class="label"> Count </div>
+                            </div>
+                        </div>
+                    </div>
+                    <img class="ui tiny image left floated" src="../../img/lookup.png"> 
+                    <div class="header"> Lookup </div>
+                    <div class="meta"> Find call numbers, books, articles, locations, etc. for known items requested by patron. </div>
+                </div> 
+            </div>
 
-		</div>
-		<div class = "eight wide column"> 
-			<div class="ui fluid card">
-				<div class="content">
-					<div class = "ui inverted segment left floated">
-						<div class = "ui tiny inverted statistics left floated"> 
-							<div class = "statistic">
-								<div class = "value"> 45
-								</div> 
-								<div class = "label"> Count </div>
-							</div>
-						</div>
-					</div>
-					<img class="ui tiny image left floated" src="../../img/policy.png"> 
-					<div class = "header"> Policy </div>
-					<div class = "meta"> Hours, access privileges, borrowing, reservations, other policies. </div>
-				</div> 
-				</div>
-		</div>
-		<div class = "eight wide column"> 
-			<div class="ui fluid card">
-				<div class="content">
-					<div class = "ui inverted segment left floated">
-						<div class = "ui tiny inverted statistics left floated"> 
-							<div class = "statistic">
-								<div class = "value"> 45
-								</div> 
-								<div class = "label"> Count </div>
-							</div>
-						</div>
-					</div>
-					<img class="ui tiny image left floated" src="../../img/research.png">
-					<div class = "header"> Research Assistance </div>
-					<div class = "meta"> Help patron with research strategies, advice, overview of resources (drop-in). </div>
-				</div> 
-				</div>
-		</div>
-		<div class = "eight wide column"> 
-			<div class="ui fluid card">
-				<div class="content">
-					<div class = "ui inverted segment left floated">
-						<div class = "ui tiny inverted statistics left floated"> 
-							<div class = "statistic">
-								<div class = "value"> 45
-								</div> 
-								<div class = "label"> Count </div>
-							</div>
-						</div>
-					</div>
-					<img class="ui tiny image left floated" src="../../img/technical.png"> 
-					<div class = "header"> Technical Assistance </div>
-					<div class = "meta"> Help with printers, computers, software, scanners, etc. </div>
-				</div> 
-				</div>
-		</div>
-		<div class = "eight wide column"> 
-			<div class="ui link fluid card" id="ref">
-				<div class="content">
-					<img class="ui tiny image left floated" src="../../img/referral.png"> 
-					<div class = "header"> Referral </div> 
-					<div class = "meta"> Referral to advanced research support, library location, campus support, etc. </div>
-				</div> 
-			</div>
-		</div>
-		<div class="ui modal">
-			<div class="content">
+        </div>
+        <div class="eight wide column"> 
+            <div class="ui fluid card withCount">
+                <div class="content">
+                    <div class="ui inverted segment left floated">
+                        <div class="ui tiny inverted statistics left floated"> 
+                            <div class="statistic">
+                                <div class="value"> 0
+                                </div> 
+                                <div class="label"> Count </div>
+                            </div>
+                        </div>
+                    </div>
+                    <img class="ui tiny image left floated" src="../../img/policy.png"> 
+                    <div class="header"> Policy </div>
+                    <div class="meta"> Hours, access privileges, borrowing, reservations, other policies. </div>
+                </div> 
+            </div>
+        </div>
+        <div class="eight wide column"> 
+            <div class="ui fluid card withCount">
+                <div class="content">
+                    <div class="ui inverted segment left floated">
+                        <div class="ui tiny inverted statistics left floated"> 
+                            <div class="statistic">
+                                <div class="value"> 0
+                                </div> 
+                                <div class="label"> Count </div>
+                            </div>
+                        </div>
+                    </div>
+                    <img class="ui tiny image left floated" src="../../img/research.png">
+                    <div class="header"> Research Assistance </div>
+                    <div class="meta"> Help patron with research strategies, advice, overview of resources (drop-in). </div>
+                </div> 
+            </div>
+        </div>
+        <div class="eight wide column"> 
+            <div class="ui fluid card withCount">
+                <div class="content">
+                    <div class="ui inverted segment left floated">
+                        <div class="ui tiny inverted statistics left floated"> 
+                            <div class="statistic">
+                                <div class="value"> 0
+                                </div> 
+                                <div class="label"> Count </div>
+                            </div>
+                        </div>
+                    </div>
+                    <img class="ui tiny image left floated" src="../../img/technical.png"> 
+                    <div class="header"> Technical Assistance </div>
+                    <div class="meta"> Help with printers, computers, software, scanners, etc. </div>
+                </div> 
+            </div>
+        </div>
+        <div class="eight wide column"> 
+            <div class="ui link fluid card" id="ref">
+                <div class="content">
+                    <img class="ui tiny image left floated" src="../../img/referral.png"> 
+                    <div class="header"> Referral </div> 
+                    <div class="meta"> Referral to advanced research support, library location, campus support, etc. </div>
+                </div> 
+            </div>
+        </div>
+
+        <!-- Referral Modal -->
+        <div class="ui modal" id="referral">
+            <div class="content">
                 <div class="ui equal width aligned grid">
                     <div class="eight wide column">
                         <div class="ui fluid card">
                             <div class="content">
                                 <img class="ui tiny image left floated" src="../../img/research.png"> 
-                                <div class = "header"> Research Assistance </div>
-                                <div class = "meta"> Help patron with research strategy, advice, overview of resources (drop-in). </div>
+                                <div class="header"> Research Assistance </div>
+                                <div class="meta"> Help patron with research strategy, advice, overview of resources (drop-in). </div>
                             </div> 
                         </div>
                     </div>
@@ -151,8 +162,8 @@
                         <div class="ui fluid card">
                             <div class="content">
                                 <img class="ui tiny image left floated" src="../../img/technical.png"> 
-                                <div class = "header"> Technical Assistance </div>
-                                <div class = "meta"> Help with printers, computers, software, scanners, etc. </div>
+                                <div class="header"> Technical Assistance </div>
+                                <div class="meta"> Help with printers, computers, software, scanners, etc. </div>
                             </div> 
                         </div>
                     </div>
@@ -160,8 +171,8 @@
                         <div class="ui fluid card">
                             <div class="content">
                                 <img class="ui tiny image left floated" src="../../img/lookup.png"> 
-                                <div class = "header"> Look up Known Item </div>
-                                <div class = "meta"> Find call numbers, books, articles, locations, etc. for known items requested by patron. </div>
+                                <div class="header"> Look up Known Item </div>
+                                <div class="meta"> Find call numbers, books, articles, locations, etc. for known items requested by patron. </div>
                             </div> 
                         </div>
                     </div>
@@ -169,8 +180,8 @@
                         <div class="ui fluid card">
                             <div class="content">
                                 <img class="ui tiny image left floated" src="../../img/directions.png"> 
-                                <div class = "header"> Directional </div>
-                                <div class = "meta"> Location or directions provided e.g. rooms, events, contact information, etc. </div>
+                                <div class="header"> Directional </div>
+                                <div class="meta"> Location or directions provided e.g. rooms, events, contact information, etc. </div>
                             </div> 
                         </div>
                     </div>
@@ -178,8 +189,8 @@
                         <div class="ui fluid card">
                             <div class="content">
                                 <img class="ui tiny image left floated" src="../../img/policy.png"> 
-                                <div class = "header"> Policy / Operations </div>
-                                <div class = "meta"> Hours, access privileges, borrowing, space reservations, other policies. </div>
+                                <div class="header"> Policy / Operations </div>
+                                <div class="meta"> Hours, access privileges, borrowing, space reservations, other policies. </div>
                             </div> 
                         </div>
                     </div>
@@ -243,7 +254,7 @@
                                 </form>
                             </div>
                             <div class="eight wide column">
-                                 <form class="ui form">
+                                <form class="ui form">
                                     <div class="grouped fields">
                                         <label for="status">Patron Status</label>
                                         <div class="field">
@@ -342,13 +353,32 @@
                         </form>
                     </div>
                 </div>
+            </div>
         </div>
-		</div>
-		<div class = "sixteen wide column">
-			<div class = "ui white massive button right floated">
-				Submit
-			</div>
-		</div>	
-	</div>
+
+        <!-- Edit Modal -->
+        <div class="ui modal" id="edit">
+            <div class="content">
+                <div class="header">
+                    <h1>
+                        Edit content for '<span id="edit-title"></span>'
+                    </h1>
+                    <div class="ui massive form">
+                        <div class="field">
+                            <label>
+                                New count:
+                            </label>
+                            <input placeholder="E.G.: 42" type="text" id="new-count">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="sixteen wide column">
+            <div class="ui white massive button right floated">
+                Submit
+            </div>
+        </div>  
+    </div>
 </body>
 </html>
