still working on edit counter

--- a/webapp/mockup-options/tap.html
+++ b/webapp/mockup-options/tap.html
@@ -47,7 +47,7 @@
         <div class="eight wide  column"> 
             <div class="ui fluid card withCount">
                 <div class="content"> 
-                    <div class="ui inverted segment left floated"> 
+                    <div class="ui inverted segment left floated" id="directions"> 
                         <div class="ui tiny inverted statistics left floated"> 
                             <div class="statistic">
                                 <div class="value"> 0 
@@ -65,7 +65,7 @@
         <div class="eight wide column"> 
             <div class="ui fluid card withCount">
                 <div class="content">
-                    <div class="ui inverted segment left floated">
+                    <div class="ui inverted segment left floated" id="lookup">
                         <div class="ui tiny inverted statistics left floated"> 
                             <div class="statistic">
                                 <div class="value"> 0
@@ -84,7 +84,7 @@
         <div class="eight wide column"> 
             <div class="ui fluid card withCount">
                 <div class="content">
-                    <div class="ui inverted segment left floated">
+                    <div class="ui inverted segment left floated" id="policy">
                         <div class="ui tiny inverted statistics left floated"> 
                             <div class="statistic">
                                 <div class="value"> 0
@@ -102,7 +102,7 @@
         <div class="eight wide column"> 
             <div class="ui fluid card withCount">
                 <div class="content">
-                    <div class="ui inverted segment left floated">
+                    <div class="ui inverted segment left floated" id="research">
                         <div class="ui tiny inverted statistics left floated"> 
                             <div class="statistic">
                                 <div class="value"> 0
@@ -120,7 +120,7 @@
         <div class="eight wide column"> 
             <div class="ui fluid card withCount">
                 <div class="content">
-                    <div class="ui inverted segment left floated">
+                    <div class="ui inverted segment left floated" id="technical">
                         <div class="ui tiny inverted statistics left floated"> 
                             <div class="statistic">
                                 <div class="value"> 0
@@ -357,7 +357,24 @@
         </div>
 
         <!-- Edit Modal -->
-        <div class="ui modal" id="edit">
+<!--         <div class="ui modal" id="">
+            <div class="content">
+                <div class="header">
+                    <h1>
+                        Edit content for '<span id="edit-title"></span>'
+                    </h1>
+                    <div class="ui massive form">
+                        <div class="field">
+                            <label>
+                                New count:
+                            </label>
+                            <input placeholder="E.G.: 42" type="text" id="new-count">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+        <div class="ui modal" id="">
             <div class="content">
                 <div class="header">
                     <h1>
