finally fixed taphold edit

--- a/webapp/mockup-options/tap.html
+++ b/webapp/mockup-options/tap.html
@@ -355,7 +355,11 @@
                 </div>
             </div>
         </div>
-
+         <div class="sixteen wide column">
+            <div class="ui white massive button right floated">
+                Submit
+            </div>
+        </div> 
         <!-- Edit Modal -->
 <!--         <div class="ui modal" id="">
             <div class="content">
@@ -374,28 +378,102 @@
                 </div>
             </div>
         </div> -->
-        <div class="ui modal" id="">
+
+        <!-- Directions Modal -->
+        <div class="ui modal" id="directions-modal">
             <div class="content">
                 <div class="header">
                     <h1>
-                        Edit content for '<span id="edit-title"></span>'
+                        Edit content for Directions
                     </h1>
                     <div class="ui massive form">
                         <div class="field">
                             <label>
                                 New count:
                             </label>
-                            <input placeholder="E.G.: 42" type="text" id="new-count">
+                            <input placeholder="E.G.: 42" type="text" id="new-directions-count">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="sixteen wide column">
-            <div class="ui white massive button right floated">
-                Submit
+
+        <!-- Lookup Modal -->
+        <div class="ui modal" id="lookup-modal">
+            <div class="content">
+                <div class="header">
+                    <h1>
+                        Edit content for Lookup
+                    </h1>
+                    <div class="ui massive form">
+                        <div class="field">
+                            <label>
+                                New count:
+                            </label>
+                            <input placeholder="E.G.: 42" type="text" id="new-lookup-count">
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>  
+        </div>
+
+        <!-- Policy Modal -->
+        <div class="ui modal" id="policy-modal">
+            <div class="content">
+                <div class="header">
+                    <h1>
+                        Edit content for Policy
+                    </h1>
+                    <div class="ui massive form">
+                        <div class="field">
+                            <label>
+                                New count:
+                            </label>
+                            <input placeholder="E.G.: 42" type="text" id="new-policy-count">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Research Modal -->
+        <div class="ui modal" id="research-modal">
+            <div class="content">
+                <div class="header">
+                    <h1>
+                        Edit content for Research Assistance
+                    </h1>
+                    <div class="ui massive form">
+                        <div class="field">
+                            <label>
+                                New count:
+                            </label>
+                            <input placeholder="E.G.: 42" type="text" id="new-research-count">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Technical Modal -->
+        <div class="ui modal" id="technical-modal">
+            <div class="content">
+                <div class="header">
+                    <h1>
+                        Edit content for Technical Assistance
+                    </h1>
+                    <div class="ui massive form">
+                        <div class="field">
+                            <label>
+                                New count:
+                            </label>
+                            <input placeholder="E.G.: 42" type="text" id="new-technical-count">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
     </div>
 </body>
 </html>
