trigger numeric keypad on taphold edit

--- a/webapp/mockup-options/tap.html
+++ b/webapp/mockup-options/tap.html
@@ -391,7 +391,7 @@
                             <label>
                                 New count:
                             </label>
-                            <input placeholder="E.G.: 42" type="text" id="new-directions-count">
+                            <input placeholder="E.G.: 42" type="number" min="0" inputmode="numberic" pattern="[0-9]*" id="new-directions-count">
                         </div>
                     </div>
                 </div>
@@ -410,7 +410,7 @@
                             <label>
                                 New count:
                             </label>
-                            <input placeholder="E.G.: 42" type="text" id="new-lookup-count">
+                            <input placeholder="E.G.: 42" type="number" min="0" inputmode="numberic" pattern="[0-9]*" id="new-lookup-count">
                         </div>
                     </div>
                 </div>
@@ -429,7 +429,7 @@
                             <label>
                                 New count:
                             </label>
-                            <input placeholder="E.G.: 42" type="text" id="new-policy-count">
+                            <input placeholder="E.G.: 42" type="number" min="0" inputmode="numberic" pattern="[0-9]*" id="new-policy-count">
                         </div>
                     </div>
                 </div>
@@ -448,7 +448,7 @@
                             <label>
                                 New count:
                             </label>
-                            <input placeholder="E.G.: 42" type="text" id="new-research-count">
+                            <input placeholder="E.G.: 42" type="number" min="0" inputmode="numberic" pattern="[0-9]*" id="new-research-count">
                         </div>
                     </div>
                 </div>
@@ -467,7 +467,7 @@
                             <label>
                                 New count:
                             </label>
-                            <input placeholder="E.G.: 42" type="text" id="new-technical-count">
+                            <input placeholder="E.G.: 42" type="number" min="0" inputmode="numberic" pattern="[0-9]*" id="new-technical-count">
                         </div>
                     </div>
                 </div>
