added tap increment and taphold edit to accordion mockup

--- a/webapp/mockup-options/tap.html
+++ b/webapp/mockup-options/tap.html
@@ -36,15 +36,15 @@
     <!-- Calendar -->
     <div class="ui calendar" id="calendar"> 
         <div class="ui input left icon"> 
-            <i class="calendar icon"> </i> 
-            <input type="text" placeholder="Date">
+            <i class='calendar icon'> </i> 
+            <input type="text" placeholder="      Date">
         </div> 
     </div>
     <br />
 
     <!-- Content -->
     <div class="ui equal width aligned grid"> 
-        <div class="eight wide  column"> 
+        <div class="eight wide column"> 
             <div class="ui fluid card withCount">
                 <div class="content"> 
                     <div class="ui inverted segment left floated" id="directions"> 
@@ -360,24 +360,6 @@
                 Submit
             </div>
         </div> 
-        <!-- Edit Modal -->
-<!--         <div class="ui modal" id="">
-            <div class="content">
-                <div class="header">
-                    <h1>
-                        Edit content for '<span id="edit-title"></span>'
-                    </h1>
-                    <div class="ui massive form">
-                        <div class="field">
-                            <label>
-                                New count:
-                            </label>
-                            <input placeholder="E.G.: 42" type="text" id="new-count">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
 
         <!-- Directions Modal -->
         <div class="ui modal" id="directions-modal">
@@ -473,7 +455,6 @@
                 </div>
             </div>
         </div>
-        
     </div>
 </body>
 </html>
