--- a/webapp/references.html
+++ b/webapp/references.html
@@ -29,10 +29,10 @@
     <div class="ui equal width center aligned grid">
         <a href = "mockup-options/tap.html" class="eight wide column" id="black">Tap</a>
         <a href = "mockup-options/accordion.html"class="eight wide blue column">Accordion</a>
-        <a href = "mockup.html"class="eight wide olive column">Original</a>
+        <a href = "mockup-options/swipe_v2.html"class="eight wide olive column">Swipe</a>
+        <a href = "mockup.html"class="eight wide column" id="black">Original</a>
         <a href = "mockup.html"class="eight wide column" id="black">Service1</a>
-        <a href = "mockup.html"class="eight wide column" id="black">Service2</a>
-        <a href = "mockup.html" class="eight wide pink column">Service3</a>
+        <a href = "mockup.html" class="eight wide pink column">Service2</a>
     </div>    
 
 </body>
