added tap incr and taphold edit to tabular mockup

--- a/webapp/references.html
+++ b/webapp/references.html
@@ -30,9 +30,9 @@
         <a href = "mockup-options/tap.html" class="eight wide column" id="black">Tap</a>
         <a href = "mockup-options/accordion.html"class="eight wide blue column">Accordion</a>
         <a href = "mockup-options/swipe_v2.html"class="eight wide olive column">Swipe</a>
+        <a href = "mockup-options/tabular.html"class="eight wide column" id="black">Tabular</a>
         <a href = "mockup.html"class="eight wide column" id="black">Original</a>
-        <a href = "mockup.html"class="eight wide column" id="black">Service1</a>
-        <a href = "mockup.html" class="eight wide pink column">Service2</a>
+        <a href = "mockup.html" class="eight wide pink column">Other</a>
     </div>    
 
 </body>
