new michelle files!

--- a/ref.html
+++ b/ref.html
@@ -33,6 +33,6 @@
         <div class="eight wide column" id="black">Service2</div>
         <div class="eight wide pink column">Service3</div>
     </div>    
-
+<img src = "/home/sahil/sshfs/srv/www/statsform/Statsform_Stock_Photos/powellfront.JPG" style="width:128px;height:128px;">
 </body>
 </html>
