--- a/webapp/mockup-options/accordion.html
+++ b/webapp/mockup-options/accordion.html
@@ -33,7 +33,7 @@
 
     <!-- Menu -->
     <div class="ui menu"> 
-        <a href="../index.html" class="header item">Home</a> 
+        <a href="../index.html" class="header item" rel="external" data-ajax="false">Home</a> 
     </div>
 
     <!-- Calendar -->
