--- a/webapp/mockup-options/swipe_v2.html
+++ b/webapp/mockup-options/swipe_v2.html
@@ -31,7 +31,7 @@
 
     <!-- Menu -->
     <div class="ui menu"> 
-        <a href="index.html" class="header item">Home</a> 
+        <a href="../index.html" class="header item" data-ajax="false" rel="external">Home</a> 
     </div>
 
     <!-- Calendar -->
