--- a/webapp/mockup.html
+++ b/webapp/mockup.html
@@ -22,7 +22,7 @@
 
     <!-- Menu -->
     <div class = "ui menu"> 
-        <a href = "index.html" class = "header item">Home</a> 
+        <a href = "/index.html" class = "header item">Home</a> 
     </div>
 
     <!-- Calendar -->
