--- a/webapp/index.html
+++ b/webapp/index.html
@@ -32,12 +32,14 @@
         <a class="six wide column" href="reference.html" style = "color:white; background-color: #FEC31C; border-style: solid; border-width: 10px; border-color:white">Young Research Library</a>
         <div class="four wide column" style = "color:white; background-color: #CF322D; border-style: solid; border-width: 10px; border-color:white"></div>
         <a class="six wide column" href="reference.html" style = "color:white; background-color: #48BEFA; border-style: solid; border-width: 10px; border-color:white">Biomedical Library</a>
-        <div class = "three wide column ui segment">
+        <div class = "three wide column ui"     >
         <img class = "ui massive image" src = "../img/Statsform_Stock_Photos/powellfront.JPG"></img> </div>
 
         <a class="eight wide blue column" href="reference.html" style = "color:white; background-color: #CF322D; border-style: solid; border-width: 10px; border-color:white">Powell Library</a>
-        <div class="five wide olive column" style = "color:white; background-color: #CF322D; border-style: solid; border-width: 10px; border-color:white"></div>
-        <div class="four wide pink column" style = "color:white; background-color: #CF322D; border-style: solid; border-width: 10px; border-color:white"></div>
+
+
+        <div class="five wide pink column" style = "color:white; background-color: #CF322D; border-style: solid; border-width: 10px; border-color:white"></div>
+        <div class="four wide orange column" style = "color:white; background-color: #CF322D; border-style: solid; border-width: 10px; border-color:white"></div>
         <a class="four wide olive column" href="reference.html" style = "color:white; background-color: #CF322D; border-style: solid; border-width: 10px; border-color:white">Arts Library</a>
         <div class="four wide column" id="black" style = "color:white; background-color: #CF322D; border-style: solid; border-width: 10px; border-color:white"></div>
         <a class="four wide blue column" href="reference.html" style = "color:white; background-color: #CF322D; border-style: solid; border-width: 10px; border-color:white">Music Library</a>
