--- a/webapp/index.html
+++ b/webapp/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <!-- Menu -->
-    <div class="ui secondary inverted menu" style = "background-color: #1465B5">
+    <div class="ui secondary inverted menu">
         <div class="right menu">
             <a class="item">
                 Login
@@ -25,27 +25,42 @@
     </div>
 
 
- 
 
 
-  <div class="ui equal width height center aligned grid" style = "margin: 20px; ">
-        <a class="six wide column" href="references.html" style = "color:white; background-color: #FEC31C; border-style: solid; border-width: 10px; border-color:white">Young Research Library</a>
-        <div class="four wide column" style = "color:white; background-color: #CF322D; border-style: solid; border-width: 10px; border-color:white"></div>
 
-        <a class="six wide column" href="references.html" style = "color:white; background-color: #48BEFA; border-style: solid; border-width: 10px; border-color:white">Biomedical Library</a>
-        <div class = "three wide column ui segment">
-        <img class = "ui massive image" src = "../img/Statsform_Stock_Photos/powellfront.JPG"></img> </div>
+    <div class="ui equal width height center aligned grid">
+        <div class="row">
+            <a class="six wide column" href="references.html" id="YRL">Young Research Library</a>
+            <div class="four wide column">
+                <img src="../img/Statsform_Stock_Photos/powellnight.jpg">
+            </div>
+            <a class="six wide column" href="references.html" id="BL">Biomedical Library</a>
 
-        <a class="eight wide blue column" href="references.html" style = "color:white; background-color: #CF322D; border-style: solid; border-width: 10px; border-color:white">Powell Library</a>
-        <div class="five wide olive column" style = "color:white; background-color: #CF322D; border-style: solid; border-width: 10px; border-color:white"></div>
-        <div class="four wide pink column" style = "color:white; background-color: #CF322D; border-style: solid; border-width: 10px; border-color:white"></div>
-        <a class="four wide olive column" href="references.html" style = "color:white; background-color: #CF322D; border-style: solid; border-width: 10px; border-color:white">Arts Library</a>
+        </div>
 
-        <div class="four wide column" id="black" style = "color:white; background-color: #CF322D; border-style: solid; border-width: 10px; border-color:white"></div>
-        <a class="four wide blue column" href="references.html" style = "color:white; background-color: #CF322D; border-style: solid; border-width: 10px; border-color:white">Music Library</a>
+        <div class="row">
+            <div class="four wide column">
+                <img src="../img/Statsform_Stock_Photos/powellfront.JPG">
+            </div>
+            <a class="eight wide column" href="references.html" id="POWELL">Powell Library</a>
+            <div class="four wide column">
+                <img src="../img/Statsform_Stock_Photos/130515_UCLA_2472.tif">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="four wide column">
+                <img src="../img/Statsform_Stock_Photos/DAY1_SHOT1_POWELL-93_r_cmyk.tif">
+            </div>
+            <a class="four wide column" href="references.html" id="AL">Arts Library</a>
+            <div class="four wide column">
+                <img src="../img/Statsform_Stock_Photos/DAY3_SHOT5_YOUNGLIBRARY-2192_r_cmyk.tif">
+            </div>
+            <a class="four wide column" href="references.html" id="ML">Music Library</a>
+        </div>
     </div>      
 
-  
+
 <!-- 
 
 2/15:
